Responsivity fixes for Forms-page and lefhand nav-drawer on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -342,6 +342,7 @@ code {
   height: 250px;
   background: url("assets/form-banner.jpg");
   background-size: cover;
+  background-position: center center;
   position: absolute;
   top: 0;
   left: 24px;
@@ -680,4 +681,10 @@ nav * {
   padding: 5px 10px 5px 10px;
   border-radius: 3px;
   /* box-shadow: 10px 0 50px rgba(0, 0, 0, 0.5); */
+}
+
+@media (max-width: 600px) {
+  .hide-on-mobile {
+    display: none
+  }
 }
